@@ -30,6 +30,7 @@ application {
 }
 
 dependencies {
+    implementation 'org.xerial:sqlite-jdbc:3.53.4.0'
     testImplementation platform('org.junit:junit-bom:5.13.4')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -37,6 +38,7 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
 
 checkstyle {
